[package]
name = "feature-flags"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = '1.0.154', features = ["derive"] }
ureq = "2.6.2"

[target.'cfg(target_family = "wasm")'.dependencies]
leptos = '0.2.1'

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redis = '0.22.3'
actix-web = '4.3.1'
