[package]
name = "feature-flags"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = '1.0.154', features = ["derive"] }
leptos = '0.2.1'
reqwasm = { version = "0.5.0" }
futures-util = "0.3.26"
wasm-bindgen = "0.2.84"
redis = '0.22.3'
env_logger = "0.10.0"
log = "0.4.17"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
actix-web = '4.3.1'
